@@ -54,7 +54,7 @@ gimp_pdb_get_brush (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty brush name"));
       return NULL;
     }
@@ -64,12 +64,12 @@ gimp_pdb_get_brush (Gimp         *gimp,
 
   if (! brush)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Brush '%s' not found"), name);
     }
   else if (writable && ! GIMP_DATA (brush)->writable)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Brush '%s' is not editable"), name);
       return NULL;
     }
@@ -95,7 +95,7 @@ gimp_pdb_get_generated_brush (Gimp         *gimp,
 
   if (! GIMP_IS_BRUSH_GENERATED (brush))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Brush '%s' is not a generated brush"), name);
       return NULL;
     }
@@ -115,7 +115,7 @@ gimp_pdb_get_pattern (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty pattern name"));
       return NULL;
     }
@@ -125,7 +125,7 @@ gimp_pdb_get_pattern (Gimp         *gimp,
 
   if (! pattern)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Pattern '%s' not found"), name);
     }
 
@@ -145,7 +145,7 @@ gimp_pdb_get_gradient (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty gradient name"));
       return NULL;
     }
@@ -155,12 +155,12 @@ gimp_pdb_get_gradient (Gimp         *gimp,
 
   if (! gradient)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Gradient '%s' not found"), name);
     }
   else if (writable && ! GIMP_DATA (gradient)->writable)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Gradient '%s' is not editable"), name);
       return NULL;
     }
@@ -181,7 +181,7 @@ gimp_pdb_get_palette (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty palette name"));
       return NULL;
     }
@@ -191,12 +191,12 @@ gimp_pdb_get_palette (Gimp         *gimp,
 
   if (! palette)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Palette '%s' not found"), name);
     }
   else if (writable && ! GIMP_DATA (palette)->writable)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Palette '%s' is not editable"), name);
       return NULL;
     }
@@ -216,7 +216,7 @@ gimp_pdb_get_font (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty font name"));
       return NULL;
     }
@@ -226,7 +226,7 @@ gimp_pdb_get_font (Gimp         *gimp,
 
   if (! font)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Font '%s' not found"), name);
     }
 
@@ -245,7 +245,7 @@ gimp_pdb_get_buffer (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty buffer name"));
       return NULL;
     }
@@ -255,7 +255,7 @@ gimp_pdb_get_buffer (Gimp         *gimp,
 
   if (! buffer)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Named buffer '%s' not found"), name);
     }
 
@@ -274,7 +274,7 @@ gimp_pdb_get_paint_info (Gimp         *gimp,
 
   if (! name || ! strlen (name))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Invalid empty paint method name"));
       return NULL;
     }
@@ -284,7 +284,7 @@ gimp_pdb_get_paint_info (Gimp         *gimp,
 
   if (! paint_info)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Paint method '%s' does not exist"), name);
     }
 
@@ -300,7 +300,7 @@ gimp_pdb_item_is_attached (GimpItem  *item,
 
   if (! gimp_item_is_attached (item))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Item '%s' (%d) can not be used because it has not "
                      "been added to an image"),
                    gimp_object_get_name (GIMP_OBJECT (item)),
@@ -321,7 +321,7 @@ gimp_pdb_layer_is_text_layer (GimpLayer  *layer,
 
   if (! gimp_drawable_is_text_layer (GIMP_DRAWABLE (layer)))
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Layer '%s' (%d) can not be used because it is not "
                      "a text layer"),
                    gimp_object_get_name (GIMP_OBJECT (layer)),
@@ -348,11 +348,10 @@ gimp_pdb_get_vectors_stroke (GimpVectors  *vectors,
 
   if (! stroke)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_CALLING_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Vectors object %d does not contain stroke with ID %d"),
                    gimp_item_get_ID (GIMP_ITEM (vectors)), stroke_ID);
     }
 
   return stroke;
 }
-
