@@ -67,7 +67,7 @@ HELP
 
   if (! layer)
     {
-      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_EXECUTION_ERROR,
+      g_set_error (error, GIMP_PDB_ERROR, GIMP_PDB_INVALID_ARGUMENT,
                    _("Failed to create text layer"));
 
       success = FALSE;
